2001-08-13  Juergen Vigna  <jug@sad.it>

	* insetert.C (InsetERT): init status_ also in the 3rd constructor.

	* insettabular.C (tabularFeatures): fixed fix where deleting the
	last row didn't get the right actcell!

2001-08-11  Dekel Tsur  <dekelts@tau.ac.il>

	* insettext.C (localDispatch): Change language only when the inset 
	becomes empty.

2001-08-10  Juergen Vigna  <jug@sad.it>

	* insettabular.C (selectNextWordInt): use the front using edit call.

	* insetcollapsable.C (getMaxWidth): rename inset to in to not have
	the parameter overwrite class variable inset.

	* inset.C (getMaxWidth): fix the setting of the minwidth = 10.

	* insettext.C (saveLyXTextState): check for invalid cursor-par.
	(reinitLyXText): remove wrong_cursor bool as not needed anymore!

	* insettabular.C (calculate_dimensions_of_cells): let's try to call
	update only for fixed with cells.
	(resetPos): try to fix the lockup on spellchecking or s&r.

	* insettext.C (update): comment this out as it seems first wrong
	and second not needed anymore!
	(some functions): call reinitLyXText() only in update() in all other
	positions set only need_update = INIT.

2001-08-08  Juergen Vigna  <jug@sad.it>

	* insettabular.C (setPos): fixed wrong actrow < rows() check.

	* insettext.C (insetUnlock): remove double-space on inset unlock.

	* insetcollapsable.C (draw): fix returned x when label > inset-width.

	* insettabular.C (update): fixed cursor positon after an insert.
	(insetAllowed): do not allow to insert insets when not inside the
	inset!
	(draw): clear below an inset too as it could have changed height.

	* inset.C (getMaxWidth): fixed width for inset in inset.

	* insettext.C (update): small fix.

	* insettabular.C (tabularFeatures): added selection support to
	DELETE_ROW/DELETE_COLUMN.

2001-08-07  Juergen Vigna  <jug@sad.it>

	* inset.C (getMaxWidth): recoded and all it's implementations!

	* insettext.C (init,setParagraph+constructors): cleanups